# prepublish-ng

./: .gitignore  Cargo.toml  README.md
src/: cfg.rs  main.rs  state.rs
src/mongo_entities/: mod.rs  paper_collection.rs  profile.rs  thesis.rs
src/routes/: comment.rs  file.rs  magazine.rs  mod.rs  review.rs  thesis.rs  version.rs
src/routes/account/: mod.rs  profile.rs
src/routes/common/: auth.rs  err.rs  mod.rs  query.rs
src/sql_entities/: account.rs  mod.rs  prelude.rs
